backend/k8s/front/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    stage: namespace
