backend/k8s/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-frontend
  namespace: frontend
  labels:
    stage: app
    app: nextjs-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nextjs-frontend
  template:
    metadata:
      labels:
        app: nextjs-frontend
    spec:
      containers:
        - name: nextjs
          image: social-network/front:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
